--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style>
         body {
             background-image: url("batmanbestWP.jpg");
+            background-repeat: no-repeat;
         }
 
         .tt {
