--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         body {
             background-image: url("batmanbestWP.jpg");
             background-size: contain;
+            background-position: center;
         }
 
         .tt {
