--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
         .tt {
             color: white;
-            backdrop-filter: blur(12px) saturate(180%);
-            -webkit-backdrop-filter: blur(16px) saturate(180%);
+            /* backdrop-filter: blur(12px) saturate(180%); */
+            /* -webkit-backdrop-filter: blur(16px) saturate(180%); */
             background-color: rgba(17, 25, 40, 0.1);
             border-radius: 12px;
             border: 1px solid rgba(255, 255, 255, 0.125);
