--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Kaala vishleshana</title>
     <style>
         body {
-            background-image: url("batmanbestWP.jpg");
+            /* background-image: url("batmanbestWP.jpg"); */
+            background-image: url("Arjuna.jpg");
+
             background-size: contain;
             background-position: center;
 
