--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             /* background-image: url("batmanbestWP.jpg"); */
             background-image: url("Arjuna.jpg");
-
+            background-repeat: no-repeat;
             background-size: contain;
             background-position: center;
 
