--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             /* background-image: url("batmanbestWP.jpg"); */
             background-image: url("Arjuna.jpg");
             background-repeat: no-repeat;
-            background-size: contain;
+            background-size: cover;
             background-position: center;
 
 
@@ -18,9 +18,9 @@
 
         .tt {
             color: white;
-            /* backdrop-filter: blur(12px) saturate(180%); */
-            /* -webkit-backdrop-filter: blur(16px) saturate(180%); */
-            background-color: rgba(17, 25, 40, 0.1);
+            backdrop-filter: blur(7px) saturate(180%);
+            -webkit-backdrop-filter: blur(7px) saturate(180%);
+            background-color: rgba(0, 0, 0, 0.1);
             border-radius: 12px;
             border: 1px solid rgba(255, 255, 255, 0.125);
         }
