--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             color: white;
             backdrop-filter: blur(7px) saturate(180%);
             -webkit-backdrop-filter: blur(7px) saturate(180%);
-            background-color: rgba(0, 0, 0, 0.1);
+            /* background-color: rgba(0, 0, 0, 0.1); */
             border-radius: 12px;
             border: 1px solid rgba(255, 255, 255, 0.125);
         }
