--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
         .tt {
             color: white;
-            backdrop-filter: blur(7px) saturate(180%);
-            -webkit-backdrop-filter: blur(7px) saturate(180%);
+            backdrop-filter: blur(11px) saturate(11%);
+            -webkit-backdrop-filter: blur(7px) saturate(11%);
             /* background-color: rgba(0, 0, 0, 0.1); */
             border-radius: 12px;
             border: 1px solid rgba(255, 255, 255, 0.125);
@@ -71,12 +71,12 @@
 </head>
 
 <body>
-    <div id="countdown-container">
+    <!-- <div id="countdown-container">
         <div id="progress-bar"></div>
         <div id="time-left"></div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js"></script> -->
     
 
 
